[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/images/Base pack/Enemies/fishSwim1.png" type="Texture" id=1]
[ext_resource path="res://DangerFish.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/SwimmingSound.mp3" type="AudioStream" id=3]
[ext_resource path="res://assets/images/Base pack/Enemies/fishSwim2.png" type="Texture" id=4]
[ext_resource path="res://assets/sounds/NibbleSound.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "shake"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "swim"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 1 ) ]
}

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.109804, 0.909804, 0.0431373, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[node name="DangerFish" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 980, 30 )
collision_layer = 4
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
self_modulate = Color( 0.917647, 0.235294, 0.235294, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 3.3, 2.15 )
shape = SubResource( 1 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
scale = Vector2( 3.25, 2.25 )
shape = SubResource( 2 )

[node name="SwimSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -30.0
pitch_scale = 1.75
max_distance = 1000.0

[node name="PathTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 3.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/death = SubResource( 7 )
anims/shake = SubResource( 8 )
anims/swim = SubResource( 3 )

[node name="DamageTimer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.25

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -32.0
margin_top = -35.0
margin_right = 32.0
margin_bottom = -25.0
custom_styles/fg = SubResource( 5 )
custom_styles/bg = SubResource( 6 )
percent_visible = false

[node name="NibbleSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
volume_db = -15.0
pitch_scale = 1.75
max_distance = 800.0
attenuation = 1.62451

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 4.0

[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="." method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
